# browser-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  zbpack.json
docs/design/: 2026-04-30-interview-hw-design.md
docs/per-task/: task2-browser-agent.md  task2-task3-orchestration-decision.md
docs/research/: 2026-04-30-research-summary.md  2026-04-30-skill-conventions-research.md  2026-05-01-browser-agent-update.md  2026-05-01-failure-mode-fixes.md  2026-05-01-skill-conventions-update.md
evals/browser-tasks/: edge_case_after_fix_run.json  edge_case_after_planner_fix_run.json  edge_case_final_run.json  edge_case_first_run.json  finance_after_planner_rule.json  generic_after_planner_rule.json  last_run.json  runner.py  tasks.yaml
prompts/: 2026-04-30-architecture-three-component.md  2026-05-01-eval-determinism-3run.md  2026-05-01-k2-vs-k3-validator.md  2026-05-01-locator-ladder-revision.md  2026-05-01-sec-httpx-fallback.md  2026-05-09-edge-case-eval.md  2026-05-09-self-maintenance-completion.md  README.md
scripts/: browser_smoke.py
skills/browser-task/: SKILL.md
src/server/: __init__.py  main.py  tasks.py
src/shared/: db.py  llm_client.py  retry.py
src/workers/browser/: __main__.py  actor.py  handlers.py  locator_ladder.py  planner.py  schema.py  (+3 more)
tasks/: lessons.md
tests/: test_browser_locator_ladder.py  test_browser_selector_cache.py  test_browser_silent_failure.py  test_browser_validator_parser.py  test_classifier.py  test_llm_assist.py  test_llm_client.py  test_retry.py
ui/: app.js  index.html  styles.css
(+2 files in other folders)
